--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 absl-py==2.1.0
+aiohttp==3.9.5
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
 appnope==0.1.4
@@ -20,17 +22,21 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 comm==0.2.2
+datasets==2.20.0
 debugpy==1.8.2
 decorator==5.1.1
 defusedxml==0.7.1
+dill==0.3.8
 distlib==0.3.8
 distro==1.9.0
 executing==2.0.1
+faiss-cpu==1.8.0
 fastjsonschema==2.20.0
 filelock==3.15.4
 flatbuffers==24.3.25
 fqdn==1.5.1
-fsspec==2024.6.1
+frozenlist==1.4.1
+fsspec==2024.5.0
 gast==0.6.0
 gitdb==4.0.11
 GitPython==3.1.43
@@ -52,6 +58,7 @@ isort==5.13.2
 jedi==0.19.1
 Jinja2==3.1.4
 json5==0.9.25
+jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
@@ -70,6 +77,10 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.11
 keras==3.4.1
+langchain==0.2.12
+langchain-core==0.2.28
+langchain-text-splitters==0.2.2
+langsmith==0.1.97
 libclang==18.1.1
 load-dotenv==0.1.0
 Markdown==3.6
@@ -80,6 +91,8 @@ mdurl==0.1.2
 mistune==3.0.2
 ml-dtypes==0.3.2
 mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
 mypy-extensions==1.0.0
 namex==0.0.8
 nbclient==0.10.0
@@ -95,6 +108,7 @@ numpy==1.26.4
 openai==1.37.1
 opt-einsum==3.3.0
 optree==0.12.1
+orjson==3.10.6
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.2
@@ -111,6 +125,8 @@ protobuf==4.25.4
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==17.0.0
+pyarrow-hotfix==0.6
 pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
@@ -137,8 +153,10 @@ six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.5
+SQLAlchemy==2.0.32
 stack-data==0.6.3
 sympy==1.13.1
+tenacity==8.5.0
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.2
@@ -168,3 +186,5 @@ Werkzeug==3.0.3
 wheel==0.43.0
 widgetsnbextension==4.0.11
 wrapt==1.16.0
+xxhash==3.4.1
+yarl==1.9.4
