--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 comm==0.2.2
+dataclasses-json==0.6.7
 datasets==2.20.0
 debugpy==1.8.2
 decorator==5.1.1
@@ -78,6 +79,7 @@ jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.11
 keras==3.4.1
 langchain==0.2.12
+langchain-community==0.2.11
 langchain-core==0.2.28
 langchain-text-splitters==0.2.2
 langsmith==0.1.97
@@ -86,6 +88,7 @@ load-dotenv==0.1.0
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.21.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.0.2
@@ -173,6 +176,7 @@ tqdm==4.66.4
 traitlets==5.14.3
 transformers @ git+https://github.com/huggingface/transformers@a2ad9d5ad53f68c1ad268f7f46538eac6f5b631b
 types-python-dateutil==2.9.0.20240316
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
 uri-template==1.3.0
