--- a/requirements.txt
+++ b/requirements.txt
@@ -126,6 +126,7 @@ prometheus_client==0.20.0
 prompt_toolkit==3.0.47
 protobuf==4.25.4
 psutil==6.0.0
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==17.0.0
